# devsecops-play

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
.github/workflows/: pr-checks.yaml  pre-commit.yaml  security.yaml  terraform.yaml
app/: __init__.py  config.yaml  db.py
terraform/: .terraform.lock.hcl  backend.tf  main.tf
